// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-bad-katex-solution 1`] = `
{
  "errors": [
    {
      "file": "p1.sk.md",
      "half": "solution",
      "rule": "katex",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-bad-katex-statement 1`] = `
{
  "errors": [
    {
      "file": "p1.sk.md",
      "half": "statement",
      "rule": "katex",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-bad-language 1`] = `
{
  "errors": [
    {
      "file": "_meta.yaml",
      "half": null,
      "rule": "meta",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-bad-problem-meta 1`] = `
{
  "errors": [
    {
      "file": "p1.yaml",
      "half": null,
      "rule": "problem-meta",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-body-frontmatter 1`] = `
{
  "errors": [
    {
      "file": "p1.sk.md",
      "half": null,
      "rule": "body-frontmatter",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-duplicate-order 1`] = `
{
  "errors": [
    {
      "file": "(folder)",
      "half": null,
      "rule": "problem-files",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-empty-statement 1`] = `
{
  "errors": [
    {
      "file": "p1.sk.md",
      "half": "statement",
      "rule": "empty-statement",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-image-stem-collision 1`] = `
{
  "errors": [
    {
      "file": "p1.yaml",
      "half": null,
      "rule": "image-stem-collision",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-malformed-meta 1`] = `
{
  "errors": [
    {
      "file": "_meta.yaml",
      "half": null,
      "rule": "meta",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-malformed-problem-meta 1`] = `
{
  "errors": [
    {
      "file": "p1.yaml",
      "half": null,
      "rule": "problem-meta",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-missing-body 1`] = `
{
  "errors": [
    {
      "file": "p1.yaml",
      "half": null,
      "rule": "missing-body",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-missing-image 1`] = `
{
  "errors": [
    {
      "file": "p1.sk.md",
      "half": null,
      "rule": "missing-image",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-missing-meta-file 1`] = `
{
  "errors": [
    {
      "file": "_meta.yaml",
      "half": null,
      "rule": "meta",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-missing-problem-meta 1`] = `
{
  "errors": [
    {
      "file": "p1.yaml",
      "half": null,
      "rule": "missing-problem-meta",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-no-problems 1`] = `
{
  "errors": [
    {
      "file": "(folder)",
      "half": null,
      "rule": "problem-files",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 0,
  "problemLanguages": [],
  "problemOrders": [],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-noncontiguous 1`] = `
{
  "errors": [
    {
      "file": "(folder)",
      "half": null,
      "rule": "problem-files",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 2,
  "problemLanguages": [
    [
      "sk",
    ],
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
    3,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-starts-at-two 1`] = `
{
  "errors": [
    {
      "file": "(folder)",
      "half": null,
      "rule": "problem-files",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    2,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-translation-bad-katex 1`] = `
{
  "errors": [
    {
      "file": "p1.en.md",
      "half": "statement",
      "rule": "katex",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
      "en",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-translation-solution-without-original 1`] = `
{
  "errors": [
    {
      "file": "p1.en.md",
      "half": "solution",
      "rule": "translation-solution-without-original",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
      "en",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-unknown-lang 1`] = `
{
  "errors": [
    {
      "file": "p1.de.md",
      "half": null,
      "rule": "unknown-lang",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > invalid-unsupported-image 1`] = `
{
  "errors": [
    {
      "file": "p1.sk.md",
      "half": null,
      "rule": "unsupported-image-format",
      "severity": "error",
    },
  ],
  "ok": false,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-basic 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 2,
  "problemLanguages": [
    [
      "sk",
    ],
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
    2,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-default-round 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "en",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-external-image 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-image-params 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-minimal-meta 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-multi-author 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-multilang 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
      "cs",
      "en",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-no-category 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "en",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-orphan-warns 1`] = `
{
  "errors": [
    {
      "file": "images/extra.svg",
      "half": null,
      "rule": "orphan-image",
      "severity": "warning",
    },
  ],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-raster-image 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-shared-image-across-langs 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
      "en",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-solution-image 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-solution-link 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-translation-only 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "cs",
      "en",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-translation-solution 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
      "en",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;

exports[`preflight-draft fixtures (verdict + snapshot) > valid-translation-statement-only 1`] = `
{
  "errors": [],
  "ok": true,
  "problemCount": 1,
  "problemLanguages": [
    [
      "sk",
      "en",
    ],
  ],
  "problemOrders": [
    1,
  ],
}
`;
